cabal-version:      2.4
name:               aoc
version:            0.1.0.0
synopsis:           AoC solutions

-- A longer description of the package.
-- description:
homepage:           https://github.com/aguxez/aoc

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Miguel Diaz
maintainer:         diazmiiguel@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  One,Two

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , relude ==1.1.0.0
                    , split ==0.2.3.5
    hs-source-dirs:   lib
    default-language: Haskell2010
    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude
